--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,175 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>PowerP</h1>
-    <section>
-      <h2>Banner</h2>
+    <!-- Desktop header -->
+    <header class="header">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 container">
+        <a href="/" class="d-flex align-items-center mb-2 mb-md-0">
+          <img src="./public/white-logo.svg" alt="logo" class="light-logo">
+          <img src="./public/logo.svg" alt="logo" class="logo">
+        </a>
+  
+        <ul class="nav col-12 col-md-auto mb-3 justify-content-center mb-md-0 main-menu">
+          <li><a href="#" class="nav-link px-3">Šta radimo</a></li>
+          <li><a href="#" class="nav-link px-3">O nama </a></li>
+          <li><a href="#" class="nav-link px-3">Šta nudimo</a></li>
+          <li><a href="#" class="nav-link px-3">Tim</a></li>
+          <li><a href="#" class="nav-link px-3">Kontakt</a></li>
+        </ul>
+        <ul class="nav col-md-3 d-flex flex-wrap align-items-center justify-content-end language-menu">
+          <li><a href="#" class="nav-link px-2 active">sr</a></li>
+          <li><a href="#" class="nav-link px-2">en</a></li>
+        </div>
+      </div>
+    </header>
+    <!-- END Desktop header -->
+    <!-- Tablet/Mobile header -->
+    <!-- END Tablet/Mobile header -->
+    <section class="main-section">
+      <h1>PowerUP Your Business <br> with PowERP!</h1>
+      <img src="./public/Group 4345.png" alt="PowERP" class="main-section--img">
     </section>
+    <section class="about-section--one">
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">PowERP je kompanija koja pruža usluge implementacije i održavanja ERP sistema, 
+          kao i izrade aplikacija u srodnom Power Platform okruženju. PowERP je vaša produžena ruka u  planiranju, organizaciji i poboljšanju kvaliteta vaših poslovnih procesa u organizaciji. Mi stvaramo i dizajniramo sistem koji je upotrebljiv u svakoj industriji.</p>
+        <a href="#"><img src="./public/arrow.png" alt="arrow" class="arrow"></a>
+      </div>
+    </section>
+    <section class="about-section--two">
+      <div class="col-lg-6 mx-auto">
+        <p>PowERP nudi jedinstvena aplikativna rešenja koja 
+          će klijentima omogućiti da potpuno organizuju 
+          i sistematizuju svoje poslovno okruženje.</p>
+      </div>
+    </section>
+    <section class="about-section--three">
+      <div class="col-lg-10 mx-auto">
+        <h3> Implementacijom informacionog sistema <br>
+          (ERP sistem) integriše se:</h3>
+          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col">
+              <img src="./public/icon_1.png" alt="icon">
+              <p>Mogućnost praćenja i planiranja <br>
+                promena u svakodnevnom poslovanju</p>
+            </div>
+            <div class="feature col">
+              <img src="./public/icon_2.png" alt="icon">
+              <p>Kompletno funkcionisanje<br>
+                poslovnih procesa</p>
+            </div>
+            <div class="feature col">
+              <img src="./public/icon_3.png" alt="icon">
+              <p>Sistemska povezanost sa svim svojim<br> organizacionim jedinicama i zaposlenima</p>
+            </div>
+          </div>
+          <h2>O nama</h2>
+      </div>
+    </section>
+    <section class="about-us-section row">
+      <div class="col-3">
+        <div class="row flex-column">
+          <div class="col eampty blue-box box"></div>
+          <div class="col with-img left"></div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="row flex-column">
+          <div class="col blue box">
+            <p>Kao mali i kompaktan tim profesionalaca, mi smo tu da vas podržimo i razvijamo  
+              inovativna rešenja koje će olakšati i ubrzati dostizanje vaših poslovnih ciljeva.</p>
+          </div>
+          <div class="col dark-gray box">
+            <p>PowERP tim je hrabar i kreativan kada je u pitanju pronalaženje 
+              fleksibilnog poslovnog modela i tu smo da se prilagodimo konkretnim potrebama vaše organizacije.</p>
+          </div>
+          <div class="col light-gray box">
+            <p>Naša misija je vrlo jednostavna, posvećeni smo pružanju usluga svojim klijentima
+               kako bi uz naša rešenja ubrzali kompletno funkcionisanje poslovnih procesa.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="row flex-column">
+          <div class="col with-img right"></div>
+          <div class="col eampty gray-box box"></div>
+        </div>
+      </div>
+    </section>
+    <section class="partners">
+      <div class="col-lg-10 mx-auto">
+        <h2>Partneri</h2>
+          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col">
+              <img src="./public/partners/microsoft.png" alt="microsoft">
+            </div>
+            <div class="feature col">
+              <img src="./public/partners/microsoft.png" alt="microsoft">
+            </div>
+            <div class="feature col">
+              <img src="./public/partners/microsoft.png" alt="microsoft">
+            </div>
+          </div>
+      </div>
+    </section>
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.509224341921!2d20.437159115959226!3d44.79080987909873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a701fa4b3a2b9%3A0x9ec9c8d09d52b595!2sVladete%20Kova%C4%8Devi%C4%87a%206%2C%20Beograd!5e0!3m2!1sen!2srs!4v1652967653099!5m2!1sen!2srs" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+    </section>
+    <footer>
+      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 container">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 lh-1">
+            <img src="./public/white-logo.svg" alt="logo">
+          </a>
+        </div>
+    
+        <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <form class="contact-form">
+            <div class="row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Ime">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Prezime">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Telefon">
+              </div>
+              <div class="col">
+                <input type="email" class="form-control" placeholder="Email">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <textarea class="form-control" rows="1" placeholder="Poruka"></textarea>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Pošalji</button>
+          </form>
+        </div>
+      </div>
+      <section class="footer-bottom">
+        <div class="d-flex flex-wrap justify-content-between align-items-center py-3 container">
+          <div class="col-md-4 d-flex align-items-center">
+            <span class="mb-3 mb-md-0">Copyright © 2020 powerp. All rights reserved.</span>
+          </div>
+          <div class="col-md-4 d-flex align-items-center">
+            <span class="mb-3 mb-md-0">Vladete Kovačevića 6, Senjak, Beograd 011 / 454 08 22</span>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
