--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" />
@@ -16,7 +18,7 @@
   </head>
   <body>
     <!-- Desktop header -->
-    <header class="header">
+    <header class="header desktop">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 container">
         <a href="/" class="d-flex align-items-center mb-2 mb-md-0">
           <img src="./public/white-logo.svg" alt="logo" class="light-logo">
@@ -30,7 +32,7 @@
           <li><a href="#" class="nav-link px-3">Tim</a></li>
           <li><a href="#" class="nav-link px-3">Kontakt</a></li>
         </ul>
-        <ul class="nav col-md-3 d-flex flex-wrap align-items-center justify-content-end language-menu">
+        <ul class="nav col-md-1 d-flex flex-wrap align-items-center justify-content-end language-menu">
           <li><a href="#" class="nav-link px-2 active">sr</a></li>
           <li><a href="#" class="nav-link px-2">en</a></li>
         </div>
@@ -38,9 +40,56 @@
     </header>
     <!-- END Desktop header -->
     <!-- Tablet/Mobile header -->
+    <header class="header mobile">
+      <nav class="navbar" style="position: relative;">
+        <div class="container">
+          <a class="navbar-brand p-4" href="#">
+            <img src="./public/white-logo.svg" alt="logo" class="mobile-logo">
+            <img src="./public/logo.svg" alt="logo" class="mobile-dark-logo">
+          </a>
+          <button class="p-3 burger-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <div class="burger-strip">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header justify-content-end">
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <!-- Language menu -->
+              <ul class="nav col-md-1 d-flex flex-wrap align-items-center justify-content-end language-menu">
+                <li><a href="#" class="nav-link px-2 active">sr</a></li>
+                <li><a href="#" class="nav-link px-2">en</a></li>
+              </ul>
+              <!-- Canvas Logo -->
+              <div class="d-flex flex-wrap align-items-center justify-content-center">
+                <img src="./public/white-logo.svg" alt="logo" class="canvas-logo">
+              </div>
+              <!-- Mobile menu -->
+              <ul class="nav col-12 d-flex flex-column mb-3 mt-5 justify-content-center align-items-center main-menu">
+                <li><a href="#" class="nav-link px-3">Šta radimo</a></li>
+                <li><a href="#" class="nav-link px-3">O nama </a></li>
+                <li><a href="#" class="nav-link px-3">Šta nudimo</a></li>
+                <li><a href="#" class="nav-link px-3">Tim</a></li>
+                <li><a href="#" class="nav-link px-3">Kontakt</a></li>
+              </ul>
+            </div>
+            <div class="offcanvas-body bottom">
+              <p>Vladete Kovačevića 6, Senjak, Beograd</p>
+              <p>011 / 454 08 22</p>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Back to top button -->
+    <a id="bck-tt-button"></a>
     <!-- END Tablet/Mobile header -->
     <section class="main-section">
-      <h1>PowerUP Your Business <br> with PowERP!</h1>
+      <h1 style="    z-index: 500; position: relative;">PowerUP Your Business <br> with PowERP!</h1>
       <img src="./public/Group 4345.png" alt="PowERP" class="main-section--img">
     </section>
     <section class="about-section--one">
@@ -129,15 +178,15 @@
     <section class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2831.509224341921!2d20.437159115959226!3d44.79080987909873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a701fa4b3a2b9%3A0x9ec9c8d09d52b595!2sVladete%20Kova%C4%8Devi%C4%87a%206%2C%20Beograd!5e0!3m2!1sen!2srs!4v1652967653099!5m2!1sen!2srs" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
     </section>
-    <footer>
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-3 container">
-        <div class="col-md-4 d-flex align-items-center">
+    <footer class="">
+      <div class="d-flex flex-wrap justify-content-between align-items-center py-xxl-5 py-4 container">
+        <div class="col-lg-4 col-md-6 d-flex align-items-center logo-box">
           <a href="/" class="mb-3 me-2 mb-md-0 lh-1">
             <img src="./public/white-logo.svg" alt="logo">
           </a>
         </div>
     
-        <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <div class="col-lg-4 col-md-6 justify-content-end list-unstyled d-flex form-box">
           <form class="contact-form">
             <div class="row">
               <div class="col">
@@ -160,16 +209,18 @@
                 <textarea class="form-control" rows="1" placeholder="Poruka"></textarea>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Pošalji</button>
+            <div class="d-flex flex-row-reverse">
+              <button type="submit" class="btn btn-send">Pošalji</button>
+            </div>
           </form>
         </div>
       </div>
       <section class="footer-bottom">
         <div class="d-flex flex-wrap justify-content-between align-items-center py-3 container">
-          <div class="col-md-4 d-flex align-items-center">
+          <div class="col-lg-4 col-md-6 d-flex align-items-center footer-text-box">
             <span class="mb-3 mb-md-0">Copyright © 2020 powerp. All rights reserved.</span>
           </div>
-          <div class="col-md-4 d-flex align-items-center">
+          <div class="col-lg-4 col-md-6 d-flex align-items-center footer-text-box">
             <span class="mb-3 mb-md-0">Vladete Kovačevića 6, Senjak, Beograd 011 / 454 08 22</span>
           </div>
         </div>
