--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" integrity="sha512-X/RSQYxFb/tvuz6aNRTfKXDnQzmnzoawgEQ4X8nZNftzs8KFFH23p/BA6D2k0QCM4R0sY1DEy9MIY9b3fwi+bg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css" />
     <!-- JavaScript Bundle with Popper -->
@@ -19,7 +20,7 @@
   <body>
     <!-- Desktop header -->
     <header class="header desktop">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between container">
         <a href="/" class="d-flex align-items-center mb-2 mb-md-0">
           <img src="./public/white-logo.svg" alt="logo" class="light-logo">
           <img src="./public/logo.svg" alt="logo" class="logo">
@@ -89,90 +90,126 @@
     <a id="bck-tt-button"></a>
     <!-- END Tablet/Mobile header -->
     <section class="main-section">
-      <h1 style="    z-index: 500; position: relative;">PowerUP Your Business <br> with PowERP!</h1>
+      <div class="container">
+        <h1 style="    z-index: 500; position: relative;">PowerUP Your Business <br> with PowERP!</h1>
       <img src="./public/Group 4345.png" alt="PowERP" class="main-section--img">
+      </div>
     </section>
     <section class="about-section--one">
-      <div class="col-lg-6 mx-auto">
+      <div class="container">
         <p class="lead mb-4">PowERP je kompanija koja pruža usluge implementacije i održavanja ERP sistema, 
           kao i izrade aplikacija u srodnom Power Platform okruženju. PowERP je vaša produžena ruka u  planiranju, organizaciji i poboljšanju kvaliteta vaših poslovnih procesa u organizaciji. Mi stvaramo i dizajniramo sistem koji je upotrebljiv u svakoj industriji.</p>
         <a href="#"><img src="./public/arrow.png" alt="arrow" class="arrow"></a>
       </div>
     </section>
     <section class="about-section--two">
-      <div class="col-lg-6 mx-auto">
-        <p>PowERP nudi jedinstvena aplikativna rešenja koja 
-          će klijentima omogućiti da potpuno organizuju 
-          i sistematizuju svoje poslovno okruženje.</p>
+      <div class="container">
+        <div class="col-lg-6 mx-auto">
+          <p>PowERP nudi jedinstvena aplikativna rešenja koja 
+            će klijentima omogućiti da potpuno organizuju 
+            i sistematizuju svoje poslovno okruženje.</p>
+        </div>
       </div>
     </section>
     <section class="about-section--three">
-      <div class="col-lg-10 mx-auto">
-        <h3> Implementacijom informacionog sistema <br>
-          (ERP sistem) integriše se:</h3>
-          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-            <div class="feature col">
-              <img src="./public/icon_1.png" alt="icon">
-              <p>Mogućnost praćenja i planiranja <br>
-                promena u svakodnevnom poslovanju</p>
+      <div class="container">
+        <div class="col-lg-10 mx-auto">
+          <h3> Implementacijom informacionog sistema <br>
+            (ERP sistem) integriše se:</h3>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+              <div class="feature col">
+                <img src="./public/icon_1.png" alt="icon">
+                <p>Mogućnost praćenja i planiranja <br>
+                  promena u svakodnevnom poslovanju</p>
+              </div>
+              <div class="feature col">
+                <img src="./public/icon_2.png" alt="icon">
+                <p>Kompletno funkcionisanje<br>
+                  poslovnih procesa</p>
+              </div>
+              <div class="feature col">
+                <img src="./public/icon_3.png" alt="icon">
+                <p>Sistemska povezanost sa svim svojim<br> organizacionim jedinicama i zaposlenima</p>
+              </div>
             </div>
-            <div class="feature col">
-              <img src="./public/icon_2.png" alt="icon">
-              <p>Kompletno funkcionisanje<br>
-                poslovnih procesa</p>
-            </div>
-            <div class="feature col">
-              <img src="./public/icon_3.png" alt="icon">
-              <p>Sistemska povezanost sa svim svojim<br> organizacionim jedinicama i zaposlenima</p>
-            </div>
-          </div>
-          <h2>O nama</h2>
+            <h2>O nama</h2>
+        </div>
       </div>
     </section>
-    <section class="about-us-section row">
-      <div class="col-3">
-        <div class="row flex-column">
-          <div class="col eampty blue-box box"></div>
-          <div class="col with-img left"></div>
-        </div>
-      </div>
-      <div class="col-6">
-        <div class="row flex-column">
-          <div class="col blue box">
-            <p>Kao mali i kompaktan tim profesionalaca, mi smo tu da vas podržimo i razvijamo  
-              inovativna rešenja koje će olakšati i ubrzati dostizanje vaših poslovnih ciljeva.</p>
-          </div>
-          <div class="col dark-gray box">
-            <p>PowERP tim je hrabar i kreativan kada je u pitanju pronalaženje 
-              fleksibilnog poslovnog modela i tu smo da se prilagodimo konkretnim potrebama vaše organizacije.</p>
-          </div>
-          <div class="col light-gray box">
-            <p>Naša misija je vrlo jednostavna, posvećeni smo pružanju usluga svojim klijentima
-               kako bi uz naša rešenja ubrzali kompletno funkcionisanje poslovnih procesa.</p>
+    <section class="about-us-section">
+      <div class="row">
+        <div class="col-3">
+          <div class="row flex-column">
+            <div class="col empty blue-box box"></div>
+            <div class="col with-img left"></div>
           </div>
         </div>
+        <div class="col-6">
+          <div class="row flex-column">
+            <div class="col blue box">
+              <p>Kao mali i kompaktan tim profesionalaca, mi smo tu da vas podržimo i razvijamo  
+                inovativna rešenja koje će olakšati i ubrzati dostizanje vaših poslovnih ciljeva.</p>
+            </div>
+            <div class="col dark-gray box">
+              <p>PowERP tim je hrabar i kreativan kada je u pitanju pronalaženje 
+                fleksibilnog poslovnog modela i tu smo da se prilagodimo konkretnim potrebama vaše organizacije.</p>
+            </div>
+            <div class="col light-gray box">
+              <p>Naša misija je vrlo jednostavna, posvećeni smo pružanju usluga svojim klijentima
+                 kako bi uz naša rešenja ubrzali kompletno funkcionisanje poslovnih procesa.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="row flex-column">
+            <div class="col with-img right"></div>
+            <div class="col empty gray-box box"></div>
+          </div>
+        </div>
       </div>
-      <div class="col-3">
-        <div class="row flex-column">
-          <div class="col with-img right"></div>
-          <div class="col eampty gray-box box"></div>
+    </section>
+    <section class="about-us-section--col">
+      <div class="d-flex flex-column">
+        <div class="col image-box"></div>
+        <div class="col blue box">
+          <p>Kao mali i kompaktan tim profesionalaca, mi smo tu da vas podržimo i razvijamo  
+            inovativna rešenja koje će olakšati i ubrzati dostizanje vaših poslovnih ciljeva.</p>
+        </div>
+        <div class="col dark-gray box">
+          <p>PowERP tim je hrabar i kreativan kada je u pitanju pronalaženje 
+            fleksibilnog poslovnog modela i tu smo da se prilagodimo konkretnim potrebama vaše organizacije.</p>
+        </div>
+        <div class="col light-gray box">
+          <p>Naša misija je vrlo jednostavna, posvećeni smo pružanju usluga svojim klijentima
+             kako bi uz naša rešenja ubrzali kompletno funkcionisanje poslovnih procesa.</p>
         </div>
       </div>
     </section>
     <section class="partners">
-      <div class="col-lg-10 mx-auto">
-        <h2>Partneri</h2>
-          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-            <div class="feature col">
-              <img src="./public/partners/microsoft.png" alt="microsoft">
+      <div class="container">
+        <div class="col-lg-10 mx-auto">
+          <h2>Partneri</h2>
+            <div class="py-5">
+              <div class="owl-carousel owl-theme">
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
+                <div class="item"><img src="./public/partners/microsoft.png" alt="microsoft"></div>
             </div>
-            <div class="feature col">
-              <img src="./public/partners/microsoft.png" alt="microsoft">
+              <!-- <div class="feature col">
+                <img src="./public/partners/microsoft.png" alt="microsoft">
+              </div>
+              <div class="feature col">
+                <img src="./public/partners/microsoft.png" alt="microsoft">
+              </div>
+              <div class="feature col">
+                <img src="./public/partners/microsoft.png" alt="microsoft">
+              </div> -->
             </div>
-            <div class="feature col">
-              <img src="./public/partners/microsoft.png" alt="microsoft">
-            </div>
-          </div>
+        </div>
       </div>
     </section>
     <section class="map">
@@ -226,7 +263,8 @@
         </div>
       </section>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
