--- a/src/index.html
+++ b/src/index.html
@@ -226,18 +226,18 @@
         <div class="col-lg-4 col-md-6 justify-content-end list-unstyled d-flex form-box">
           <form class="contact-form">
             <div class="row">
-              <div class="col">
+              <div class="col-sm-12 col-md-6">
                 <input type="text" class="form-control" placeholder="Ime">
               </div>
-              <div class="col">
+              <div class="col-sm-12 col-md-6">
                 <input type="text" class="form-control" placeholder="Prezime">
               </div>
             </div>
             <div class="row">
-              <div class="col">
+              <div class="col-sm-12 col-md-6">
                 <input type="text" class="form-control" placeholder="Telefon">
               </div>
-              <div class="col">
+              <div class="col-sm-12 col-md-6">
                 <input type="email" class="form-control" placeholder="Email">
               </div>
             </div>
